Add option to change product count in cart
Plus display total price of order
